--- a/Index.html
+++ b/Index.html
@@ -66,7 +66,9 @@
             <div id="THEME1-Container" class="themeContainers"><a href="theme1.html">
                     <h2 class="themeHeader">Basic Web</h2>
                 </a>
-                <div id="theme1-IMG" class="themesImg"></div>
+                <div id="theme1-IMG" class="themesImg">
+                            <img src="Assets/examimages/1/background.png" alt="">
+                </div>
                 <div id="theme1-TXT" class="themesTxt">
                     <p>In this theme I got to explore the basic terminology within user interface design, digital communication, user testing and responsive web design. It was a basic but intensive introduction to some of the key skillsets that spilled over to the other themes.This theme contained 4 modules:</p>
                     <ul>
@@ -102,7 +104,8 @@
                 <div id="theme4-IMG" class="themesImg"></div>
                 <div id="theme4-TXT" class="themesTxt">
                     <p>
-                        In this theme I gained an insight into the world of user experience design. This theme gave me a basic understanding of how interaction between users and user interfaces works best, along with theories, tools and methods that can be used to gain an insight to how users actually use the system, rather than relying on personal tastes and assumptions. </p>
+                        In this theme I gained an insight into the world of user experience design. This theme gave me a basic understanding of how interaction between users and user interfaces works best, along with theories, tools and methods that can be used to gain an insight to how users actually use the system, rather than relying on personal tastes and assumptions.
+                    </p>
                 </div>
             </div>
         </section>
