--- a/theme1.html
+++ b/theme1.html
@@ -29,12 +29,41 @@
             </div>
         </div>
         <!--article section-->
-        <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
+        <img class="mainImg" id="theme1MainImg" src="Assets/examimages/1/background.png" alt="">
         <h1 class="articleTitle">THEME: BASIC WEB</h1>
         <section class="articleSection">
-            <h2 class="section">Lorem ipsum dolor sit.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
-            <img src="Assets/images/1x/Logo1.png" alt="#">
+            <a href="http://hesa.dk/index.html">Link to site.</a>
+            <h2 class="sectionheader">
+                Intro
+            </h2>
+            <p>
+                In this theme I got my first introduction to basic web development and more specifically an insight into responsive web design. This site was coded using basic html and css. Using html to set out the skeleton and using Css to give the site the necessary styling. Since this site was my first go at web development, it is not inconceivable to see that its not my best work. But it did serve its purpose which was to introduce the tools and methods required to make a responsive web design. This site comes with plenty of faults and design issues, I have chosen to include them anyways as I am looking to illustrate how much I have improved in the span of a few months.
+            </p>
+
+            <h2 class="section">
+                Moodboard
+            </h2>
+            <p>
+                For this task I was given an art style to explore and theme my website on. The art style was pop art, after spending a little while researching what pop art actually is, I started to gain ideas of what mood the website would take on. The art style is playful, colourful, and often very clean and clear.
+            </p>
+            <img src="Assets/examimages/1/moodboard.png" alt="">
+
+
+            <h2 class="section">
+                Font and Typography
+            </h2>
+            <p>
+                I decided to use the Poppins font, from the typeface family I opted for Poppins Black typeface for the Headers; I decided to use Poppins SemiBold typeface for the body texts. I think the contrast in the boldness of the strokes between the header typeface and the body typeface, clarifies to the viewer what the main content is and what the header information is. Initially I was thinking of using a font from the typeface family called impact. The clean lines and think strokes allow for easy stencilling which made it popular amongst most Pop artists. However since I’m not necessarily stencilling, rather I am creating a website, I considered using a similar typeface but one more appropriate for a website. That is how I ended with typefaces from the Poplin typeface family. I decided to go for Poplin.
+            </p>
+
+
+            <h2 class="section">
+                Colour
+            </h2>
+            <p>
+                I went for 5 colours, I went for a triadic colour wheel pallets: with two shades of red with varying light contrasts, two shades of blue also with varying light contrasts and finally a bright yellow. These three colours in essence are the primary colours, I plan on using the blues as foreground and background colours, with the lighter shade in the foreground. I plan on using the yellow as the main colour and have the red and blue play of off each other.
+            </p>
+            <img src="Assets/examimages/1/colours.jpg" alt="">
         </section>
         <div class="footer">
             <h2>FOOTER</h2>
