--- a/theme3.html
+++ b/theme3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,9 +21,9 @@
         </div>
         <div id="linkContainer">
             <ul>
-                    <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
-                    <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
-                    <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
+                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
+                <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
             </ul>
         </div>
     </div>
@@ -30,13 +31,59 @@
         <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
         <h1 class="articleTitle">THEME: BASIC CONTENT</h1>
         <section class="articleSection">
-            <h2 class="section">Lorem ipsum dolor sit.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
-            <img src="Assets/images/1x/Logo1.png" alt="#">
+            <h2 class="sectionHeader">
+                Intro
+            </h2>
+            <p>
+                In this theme, for our group project we was tasked with creating an informational brochure based on cycling in Copenhagen for a specific target group. The target group we decided too pick was young tourists visiting Copenhagen. The reason we decided to focus on this group was simply most of our team was inexperienced cyclers, especially in Copenhagen. We felt the natural learning journey we would undertake would present natural opportunity to be most informative in our brochure.
+            </p>
+            <h2>
+                03.02.01 Team Canvas
+            </h2>
+            <p>
+                We created a team canvas to align our goals, ambitions, interests and desired roles. In the people and roles section right at the top, you can see my name and role which is closest to a ponytail.
+            </p>
+            <img src="Assets/examimages/3/team-canvas.png" alt="">
+            <h2>
+                03.02.03 Storyboard
+            </h2>
+            <p>
+                As part of our task, we were tasked with creating a video guide as part of our brochure. In our storyboard you can see we considered things such as the duration-length, shot angle and size, camera movement whether or not there are transition, props and/or audio. We considered the language and what we were going to communicate to the viewer when doing the storyboard, and we decided to stick to an advert styled, story of a local and a tourist who just landed. The focus of the story is on their journey to a specified park in Copenhagen, both of them using cycling as a means of transport. The local has a relatively easy time as they know how cycling in Copenhagen is, on the other hand the tourist does not necessarily know what cycling in Copenhagen is like. The tourist has a tough time as he breaks rules and actually arrives later than the local. The idea of the story is to illustrate how knowing the rules and following them can actually cycling in Copenhagen. The shots are dynamic, changing consistently back and forth between the characters to compare their journeys.
+            </p>
+            <img src="Assets/examimages/3/SB1.png" alt="">
+            <img src="Assets/examimages/3/SB2.png" alt="">
+            <img src="Assets/examimages/3/SB3.png" alt="">
+            <img src="Assets/examimages/3/SB4.png" alt="">
+            <img src="Assets/examimages/3/SB5.png" alt="">
+            <img src="Assets/examimages/3/SB6.png" alt="">
+            <h2>
+                03.02.04 XD Prototype
+            </h2>
+            <h3>
+               Style Tile and Moodboard
+            </h3>
+            <p>
+            Below you can see the moodboard you can see we decided to hone on mood that was informative and felt affordable, safe and easily available. We wanted the end user to feel all these qualities, whilst still using the design guide provided.
+            </p>
+            <img src="Assets/examimages/3/Moodbaord.png" alt="">
+            <p>
+                The moodboard then fuelled a more technical style tile that is heavily influenced by the style guide provided.
+            </p>
+            <img src="Assets/examimages/3/StyleTile.png" alt="">
+            <a href="https://xd.adobe.com/view/8e192877-ac3f-40f0-7738-bd5aaa4bd2ad-f828/screen/49f8aac3-9b09-405e-bf8a-8a4b44900f35/guide-lines?fullscreen">
+                Link to prototype.
+            </a>
+            <h2>
+                04.01.01 Design Sprint
+            </h2>
+            <a href="http://hesa.dk/CYCLEGUIDE/FULL%20WEBSITE/index.html">
+                Link to brochure site.
+            </a>
         </section>
     </div>
     <div class="footer">
         <h2>FOOTER</h2>
     </div>
 </body>
+
 </html>
