--- a/theme4.html
+++ b/theme4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,13 +31,226 @@
         <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
         <h1 class="articleTitle">THEME: BASIC UX</h1>
         <section class="articleSection">
-            <h2 class="section">Lorem ipsum dolor sit.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
-            <img src="Assets/images/1x/Logo1.png" alt="#">
+            <h2 class="sectionHeader">04.01.01 Design Sprint</h2>
+            <h3>
+                Day1- Map
+            </h3>
+            <p>
+                The first day of the design sprint consisted on making a map, which was basically a diagram with many steps that would lead the user to our long-term goal. Afterwards we selected our target group, which ended up being the students of KEA.
+                Once we knew who our target group was as well as our long-term goal, we had to talk to the experts, which, in this case, would mean that we would ask some questions to representatives of our target group.
+            </p>
+            <img src="Assets/examimages/4/day1-1.jpg.png" alt="">
+            <img src="Assets/examimages/4/day1-2.png" alt="">
+            <h3>
+                Day2 – Sketches
+            </h3>
+            <p>
+                On the second day of the Design Sprint we started by, individually, take notes and write down some ideas about the user flow we intended for the prototype that would later be developed.
+                After that, each element of the group sketched 8 key ideas in a sheet of paper, that would later be a target of voting, where each member should vote on 3 different ideas from all the sketches.
+                To end the day, we designed a storyboard of the 3 most compelling sketches as demonstrated on the following images
+            </p>
+            <img src="Assets/examimages/4/day2-1.png" alt="">
+            <img src="Assets/examimages/4/day2-2.png" alt="">
+            <img src="Assets/examimages/4/day2-3.png" alt="">
+            <h4>
+                Storyboards
+            </h4>
+            <img src="Assets/examimages/4/SB1.png" alt="">
+            <img src="Assets/examimages/4/SB2.png" alt="">
+            <img src="Assets/examimages/4/SB3.png" alt="">
+            <h3>
+                Day3 -Decide
+            </h3>
+            <p>
+                The third day of the Design Sprint was mainly about decision and merging all the feedback and ideas between us, the team members, and coming up with a more defined storyboard.
+            </p>
+            <p>
+                We started off by talking about the ideas we liked the most about the storyboards and the sketches, and argued about better solutions.
+            </p>
+            <p>
+                After having settled the main ideas and changes we agreed on, we started drawing the storyboard on a whiteboard, and we realized that the general structure we came up with in the storyboard was completely different than the sketches and 3 storyboards we had done the day before.
+            </p>
+            <img src="Assets/examimages/4/day3-1.png" alt="">
+            <h3>
+                Day4 - Prototype
+            </h3>
+            <p>
+                This entire day was spent on developing the prototype itself, for our solution, and we managed to work efficiently, since the day before, we had split some tasks and planned for the current day.
+            </p>
+            <a href="https://xd.adobe.com/view/d266ac25-b113-4c0e-7f62-c93c7e2b4b4a-a457/screen/97229f77-1e9c-4b1f-a55d-11d0155076fc/Landing-page/ ">Link for the Fronter Prototype</a>
+            <h3>
+                Day5 - Testing
+            </h3>
+            <p>
+                This was the final day of our sprint, when we had the chance to test our “product’ by conducting a trunk test, and interviewing the target group. We started by creating the questions we wanted to be answered during the interview, which where the following:
+            </p>
+            <p>
+                Demographic related starting questions:
+            </p>
+            <ul>
+                <li>What is your age?</li>
+                <li>Where are you from?</li>
+                <li>(If you are not from Denmark) How long have you been here?</li>
+                <li>What are you studying at KEA?</li>
+            </ul>
+            <p>
+                Product related questions:
+            </p>
+            <ul>
+                <li>What was your first impression of this system?</li>
+                <li>Who do you think this system was intended for?</li>
+                <li>What is the purpose of this digital solution according to you?</li>
+                <li>What do you think about including analytics in our solution?</li>
+                <li>What do you think about including a messaging service?</li>
+                <li>Where can you find your schedule? Was it easy to find?</li>
+                <li>When and where do you first encounter a problem/issue?</li>
+                <li>How can we make it more user friendly, more intuitive?</li>
+                <li>Do you have any last comments/ suggestions with regards to this system?</li>
+            </ul>
+            <p>
+                Then we started the trunk test and we wrote down the feedback we received.
+            </p>
+            <p>Based on the feedback, we wrote down the main ones:</p>
+            <ul>
+                <li>Positive
+                    <ul>
+                        <li>All the interviewees answered correctly to our intended target group.</li>
+                        <li>Really simple and user friendly way of presenting info, not complicated.</li>
+                        <li>Everything is handy.</li>
+                        <li>Feels more fresh.</li>
+                        <li>Analytics are easy to understand.</li>
+                        <li>Messaging function is convenient.</li>
+                        <li>In line with KEA&rsquo;s visual identity.</li>
+                        <li>The pinned tabs are a good idea.</li>
+                    </ul>
+                </li>
+                <li>Negative:
+                    <ul>
+                        <li>The messaging icon wasn&rsquo;t perceived as such.</li>
+                        <li>Pencil icon for the teaching material page, would be confused for resembling a page with an input field.</li>
+                        <li>The schedule icon should have more detail, so its meaning is more noticeable.</li>
+                        <li>The submissions page should be organized in a more logical way ( maybe the task descriptions tab should be moved outside to the outside of that page).</li>
+                        <li>Analytics may be a distraction.</li>
+                        <li>The + icon on the pinned tabs was misunderstood by one user.</li>
+                        <li>The schedule should also be an option to add to the pinned area on the main page.</li>
+                        <li>Needs to be more visually appealing.</li>
+                        <li>Too much information on the settings page.</li>
+                        <li>It would be nice to be able to connect directly to other learning platforms, such as Vimeo, youtube, LinkedIn Learning).</li>
+                    </ul>
+                </li>
+            </ul>
+            <p>After reflecting on the feedback from our interviews, we decided to select the issues we think should be prioritised:</p>
+            <ul>
+                <li>The teaching material, messaging, and schedule page&rsquo;s icons should be redesigned.</li>
+                <li>The folder structure in the submissions tab should be modified to make it more user friendly.</li>
+                <li>Settings page should be better implemented.</li>
+                <li>Improve some design features to give more emphasis on some things.</li>
+                <li>The pinned tabs section on the main page should be rethought to make it more appealing, visually.</li>
+            </ul>
+            <h2>
+                04.02.01 Web Prototype
+            </h2>
+            <p>
+                In this module I decided to focus on one solution from the previous design sprint. The problem was that the current Fronter has a news section and updates that are vital to the user. This information is often lost in other webpages as it is not directly in front of the user as they go about their clicks.
+            </p>
+            <img src="Assets/examimages/4/WEBPROTO-SCREENSHOTS.png" alt="">
+            <p>
+                From left to right, the first image is of the logo page, the second is of the homepage with the newsfeed and the third image is of the article page.
+            </p>
+            <h3>
+                Work process and selected code snippets with explanations.
+            </h3>
+            <p>
+                So the first thing I began to do was work from a mobile first mentality, and the first thing I decided to tackle was the login page. I animated the login page so that the login form does a slight wink. This wink is to encourage a sense of creativity and friendliness for the students. Below are screen shots of this animation.
+            </p>
+            <img src="Assets/examimages/4/WINK-ANIMATION.png" alt="">
+            <h3>
+                Code snippets
+            </h3>
+            <img src="Assets/examimages/4/codeSnippetHtml.png" alt="">
+            <p>
+                Above is the HTML form for the login page, its simple page with a loginContainer that has a grid, which then also contains logo section and loginDiv. In the login div you have a button followed by a section tag which contains a login form.
+            </p>
+            <img src="Assets/examimages/4/codeSnippetJS.png" alt="">
+            <p>
+                In the java script snippet above, you can see that there is a listener on the button called btnBegin that executes the dropWink function upon “click”. The dropWink function just toggles the classList for the loginForm. Show class can be seen below in the css snippet.
+            </p>
+            <img src="Assets/examimages/4/Screenshot_1.png" alt="">
+            <p>
+                Above is a css snippet that contains the class show and the dropWink keyframes, the class show has a css animation that takes the keyframe information in dropWink, then sets a timer of 2s with a forward motion.
+            </p>
+            <h3>
+                Testing
+            </h3>
+            <h4>
+                Code validation
+            </h4>
+            <p>
+                The html and css are both validated.
+            </p>
+            <h4>
+                5 second test
+            </h4>
+            <p>
+                5 second test on the login page. 4 candidates, after showing each candidate the login page for 5 seconds I asked them the following questions. What do you remember? 1. red, KEA LOGO, and a button 2. red, BLACK LOGO and a button that says begin 3. red, KEA logo, black text, button, white button. 4. red, black, logo and a button.
+            </p>
+            <h4>
+                Questions
+            </h4>
+            <p>
+                What do you think the purpose of the page is?
+            </p>
+            <ol>
+                <li>I know of KEA, so its like intended for students? but its difficult to tell. &uml;</li>
+                <li>There was a begin button, I think it&rsquo;s to represent a splash screen.</li>
+                <li>I have no idea until I press the begin button</li>
+                <li>Its some sort of promotional page, since you have the logo and that&rsquo;s it</li>
+            </ol>
+            <p>
+                What do you think begin button does?
+            </p>
+            <ol>
+                <li>it will take me to the next page</li>
+                <li>it will display an animation of some sort, like the do in games</li>
+                <li>allow me to access site</li>
+                <li>present a questionnaire of some sort.</li>
+            </ol>
+            <p>
+                The reason I chose to conduct a 5 second test on the login page is that it is the first page the user sees and it actually holds no immediate function which may cause the user to click away from the site straight away.
+            </p>
+            <h4>
+                Think-aloud tests
+            </h4>
+            <p>I then conducted a think aloud test as I wanted in depth feedback from each user of what they are thinking as they are to fulfil a desires goal of &ldquo;can you figure out what is happening today?&rdquo;.</p>
+            <ul>
+                <li>The first individual, was impressed with the login form as the animation unfolded, saying oh, that&rsquo;s cool. Then the user paused to look at me thinking what is the login information. They then proceeded to input a generic username, then skipped the password to see if it will work anyways. Once it did work for them they then proceeded to the homepage, &ldquo;oh interesting its an app, but for what, they proceeded to try and press the non-functioning pin area, quickly proceeding to the news feed. &ldquo;I see its underlined, is it a link?&rdquo; and they proceeded to the article page, noting that the date was actually incorrect.</li>
+                <li>The second user, was not all that impressed by the animation on the login page at first, &ldquo;huh, where&rsquo;s it going&rdquo; when the animation was over, &ldquo;did it just wink &lsquo;ahah&rsquo;, I think the login section just winked at me&rdquo; they then completely skipped the login form and pressed submit. The user upon Hudeifer Esa 04.02.01 Web prototype seeing the home page &ldquo;oh cool its an app, but on a website interesting&rdquo; then proceeded to say &ldquo;that&rsquo;s easy, it says today right there&rdquo; &ldquo;I&rsquo;m pressing the image now&rdquo; then they proceeded to the article page. They were actually disappointed by the lorem Ipsum section of the main article noting &ldquo;that&rsquo;s informative&rdquo; with some purposeful sarcasm.</li>
+                <li>The third user, &ldquo; oh cool, so red&rdquo; was the first thing they uttered followed by &ldquo;lets begin&rdquo; as they pressed the begin button &ldquo;that&rsquo;s weird but kina cool, I don&rsquo;t usually see that happen&rdquo;. Then they also paused and then said &ldquo; username, well i don&rsquo;t see a sign up button or indicator&rdquo; then they proceeded to input their desired details, the user even added a password and then clicked submit which took them to the homepage &ldquo;I didn&rsquo;t really have input any data did i?&rdquo; they user remarked as they laughed. &ldquo;okay, what is happening today&rdquo; the tested began to browse saying &ldquo;not much is happening I guess&rdquo;. &ldquo;I am now clicking the underlined</li>
+                <li>The fourth user, &ldquo;clicking begin&rdquo; as they pressed the begin button &ldquo;oh okay that&rsquo;s cool, wish it was faster though&rdquo;. &ldquo;cool, I like the app look of this site, like I like the icons. Very cool.&rdquo; &ldquo;okay, i see today title. &rdquo; &ldquo;I am now clicking the link, or the image, i guess i&rsquo;ll try the image&rdquo; and when the user reached the article page the user remarked, &ldquo; oh so it was the image that was the link&rdquo; and also remarked &ldquo;the date is incorrect but I like the layout&rdquo;.</li>
+            </ul>
+            <p>The reason I chose to conduct a think out loud test is to gage what the user thinking as they are using the system. This allows me to see issues that I as the developer were too close to seeing, but a user who doesn&rsquo;t know how its developed may notice as they have fresh eyes.</p>
+            <h4>
+                Analysis of test results.
+            </h4>
+            <p>
+                From the 5 second test, I quickly learned that on first impression without the login form present the login page is not very informative. Its also very simple, and thus the user is actually interested in clicking the begin button. From the think-aloud tests, i learned that the animation on the animation, is welcomed by some users but is always a surprise. Then as the user proceeds they find it relatively easy to navigate to the news feed and the article. The site is very simple, so the user finds it easy to spot what they are looking for. Another unintended thing occurred frequently which is that the user found the underlined text to be more obvious a link then the image, but some users went for the image. One user even referred to the header as a ‘link’ whilst others assumed so because of the underlined text.
+            </p>
+            <h4>
+                Needed Adjustments
+            </h4>
+            <p>
+                The needed adjustments are the following:
+            </p>
+            <ul>
+                <li>It may be wise to contain a little information before the begin button, something that would indicate clearly that it is a login page.</li>
+                <li>Secondly I noticed the slightest of issues with the speed of the animation because the user thinks when the form drops forward that the animation is complete and tries to proceed but then realises animation isn&rsquo;t completely over. I&rsquo;m assuming at first impression its fine, but with repetitive use it will get boring and tiring fast.</li>
+                <li>Also I could add a hover element on the article text and article Image on the newsfeed so that when the user hovers over either the whole section becomes illuminated in some way, indicating to the user that they can press anywhere.</li>
+            </ul>
         </section>
     </div>
     <div class="footer">
         <h2>FOOTER</h2>
     </div>
 </body>
+
 </html>
