--- a/theme1.html
+++ b/theme1.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styling.css">
-    <script src="script.js" defer></script>
+    <script src="styling.css" defer></script>
     <title>Basic Web</title>
 </head>
 
